styles/styles.css
 body {
   padding-top: 50px;
   min-height: 100%;
   margin: 0;
 }
 
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
   body {
     padding-top: 40px;
     min-height: 100%;
     margin: 0;
   }
   div.fullWidth {
     width: 100%;
   }
 }
 /* ----------- Retina Screens ----------- */
 
 @media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
   body {
     padding-top: 50px;
     min-height: 100%;
     margin: 0;
   }
   div.fullWidth {
     width: 100%;
   }
 }
 
 .ace_scrollbar {
   display: none !important;
 }
 
 .hidden-thing {
   position: absolute;
   left: 100%;
   width: 50px;
   height: 50px;
   opacity: 0;
 }
 
 .powered-by-firepad {
   display: none;
 }
 
 #runCode {
   float: right;
 }
 
 .line_height {
   white-space: nowrap;
   color: #999487;
   font-size: 11px;
   height: 14px;
 }
 
 .highlight_gutter {
   color: black;
   background: #eeeeee;
   display: table-row;
 }
 
 .iframeCss {
   height: 700px;
   width: 100%;
   border-left: 1px solid #a6a195;
   overflow: auto;
   padding-left: 1.5px;
 }
 
 .flow {
   overflow: auto;

 }
 
 @-moz-document url-prefix() {
   .line_height {
     white-space: nowrap;
     color: #999487;
     font-size: 11px;
     height: 16.2px;
   }
   .highlight_gutter {
     color: black;
     background: #eeeeee;
     display: table-row;
   }
 }
 
 .iframeCssPreview {
   height: 100vh;
   /* Viewport-relative units */
   width: 100vw;
   border: none;
   overflow: auto;
   ;
 }
 
 ul.nav li a,
 ul.nav li a:visited {
   color: #888888;
   font-size: 16px;
 }
 
 ul.nav li a:hover,
 ul.nav li a:active {
   background-color: #eeeeee;
   border-left: none;
   border-top: none;
   border-right: none;
   font-size: 16px;
 }
 
 ul.nav li.active a {
   color: #888888;
   font-size: 16px;
 }
 /*glyph style work*/
 
 .glyphicon {
   padding-right: 4px;
   font-size: 16px;
 }
 /* Feature 22 style*/
 /*Nav Bar Link Style*/
 
 ul.nav li a,
 ul.nav li a:visited {
   color: #888888;
   font-size: 16px;
 }
 
 ul.nav li a:hover,
 ul.nav li a:active {
   background-color: #f8f8f8;
   border-style: solid;
   border-width: 5px;
   border-left: none;
   border-top: none;
   border-right: none;
   border-bottom-color: #0066ff;
 }
 
 ul.nav li.active a {
   color: #888888;
   font-size: 16px;
 }
 /*glyph style*/
 
 .glyphicon {
   padding-right: 4px;
   font-size: 16px;
 }
 
 .splash {
   text-align: center;
   margin: 10% 0 0 0;
   box-sizing: border-box;
 }
 
 .splash .message {
   font-size: 72px;
   line-height: 72px;
   text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
   text-transform: uppercase;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .splash .fa-spinner {
   text-align: center;
   display: inline-block;
   font-size: 72px;
   margin-top: 50px;
 }
 
 .page-host {
   position: absolute;
   left: 0;
   right: 0;
   top: 50px;
   bottom: 0;
   overflow-x: hidden;
   overflow-y: auto;
 }
 
 @media print {
   .page-host {
     position: absolute;
     left: 10px;
     right: 0;
     top: 50px;
     bottom: 0;
     overflow-y: inherit;
     overflow-x: inherit;
   }
 }
 
 section {
   margin: 0 20px;
 }
 
 .navbar-nav li.loader {
   margin: 12px 24px 0 6px;
 }
 
 .pictureDetail {
   max-width: 425px;
 }
 /* animate page transitions */
 
 section.au-enter-active {
   -webkit-animation: fadeInRight 1s;
   animation: fadeInRight 1s;
 }
 
 div.au-stagger {
   /* 50ms will be applied between each successive enter operation */
   -webkit-animation-delay: 50ms;
   animation-delay: 50ms;
 }
 
 .card-container.au-enter {
   opacity: 0;
 }
 
 .card-container.au-enter-active {
   -webkit-animation: fadeIn 2s;
   animation: fadeIn 2s;
 }
 
 .card {
   overflow: hidden;
   position: relative;
   border: 1px solid #CCC;
   border-radius: 8px;
   text-align: center;
   padding: 0;
   background-color: #337ab7;
   color: rgb(136, 172, 217);
   margin-bottom: 32px;
   box-shadow: 0 0 5px rgba(0, 0, 0, .5);
 }
 
 .card .content {
   margin-top: 10px;
 }
 
 .card .content .name {
   color: white;
   text-shadow: 0 0 6px rgba(0, 0, 0, .5);
   font-size: 18px;
 }
 
 .card .header-bg {
   /* This stretches the canvas across the entire hero unit */
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 70px;
   border-bottom: 1px #FFF solid;
   border-radius: 6px 6px 0 0;
 }
 
 .card .avatar {
   position: relative;
   margin-top: 15px;
   z-index: 100;
 }
 
 .card .avatar img {
   width: 100px;
   height: 100px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
   border: 2px #FFF solid;
 }
 /* animation definitions */
 
 @-webkit-keyframes fadeInRight {
   0% {
     opacity: 0;
     -webkit-transform: translate3d(100%, 0, 0);
     transform: translate3d(100%, 0, 0)
   }
   100% {
     opacity: 1;
     -webkit-transform: none;
     transform: none
   }
 }
 
 @keyframes fadeInRight {
   0% {
     opacity: 0;
     -webkit-transform: translate3d(100%, 0, 0);
     -ms-transform: translate3d(100%, 0, 0);
     transform: translate3d(100%, 0, 0)
   }
   100% {
     opacity: 1;
     -webkit-transform: none;
     -ms-transform: none;
     transform: none
   }
 }
 
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
   }
 }
 
 @keyframes fadeIn {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
   }
 }
 
 .seecoderun-tooltip {
   background-color: #FFF;
   background-image: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.1));
   background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.1));
   border: 1px solid gray;
   border-radius: 1px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   color: black;
   max-width: 100%;
   padding: 3px 4px;
   position: absolute;
   z-index: 10;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   cursor: default;
   white-space: pre;
   word-wrap: break-word;
   line-height: normal;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
   pointer-events: none;
   display: none;
 }
 
 .ace_gutter-cell.seecoderun-gutter-decoration {
   background-color: #FFF;
   border-radius: 20px 0px 0px 20px;
   box-shadow: 0px 0px 1px 1px red inset;
   background-repeat: no-repeat;
   background-position: 2px center;
 }
 
 td,
 th {
   padding: 1px 4px;
   border: 1px black solid;
 }
 
 #visualizations {
   padding-top: 5px;
 }
 
 #vis-navbar {
   padding-bottom: 5px;
 }
 
 .page-host {
   padding-top: 50px;
 }
 
 .navbar .navbar-brand img {
   height: 125%;
 }
 
 .navbar-chat {
   margin-top: 7px;
   color: #888888;
   font-size: 16px !important;
 }
 
 .w3-table, .w3-table tr, .w3-table td {
   border-collapse: collapse; 
   border: 2px solid black;
}

